Made scroll button into a separate component. Fixed bug where banner would jump from 1000 width to 1024 width.

--- a/app/globals.css
+++ b/app/globals.css
@@ -191,8 +191,6 @@ body {
 
 @media (min-width: 1025px) {
   .banner {
-    height: auto;
-    width: auto;
     max-width: 1024px;
   }
 
